# serval-kit

./: .gitattributes  .gitignore  .habitat  .tools_shared  AGENTS.md  DEPS  DEPS.testing  Gemfile  README.md  ServalMarkdown.podspec  ServalSVG.podspec
markdown/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  ServalMarkdown.podspec  initial-markdown.sh
markdown/example/android/: build.gradle  gradle.properties  settings.gradle
markdown/example/android/app/: build.gradle
markdown/example/harmony/: .gitignore  build-profile.json5  oh-package.json5
markdown/example/harmony/AppScope/: app.json5
markdown/example/harmony/entry/: oh-package.json5
markdown/example/harmony/scripts/: build.py
markdown/example/ios/ServalMarkdownDemo/: .gitignore  Gemfile  Podfile
markdown/example/macos/: CMakeLists.txt  README.md
markdown/example/macos/app/: markdown_macos_demo.mm  mtl_app.h  mtl_app.mm  skity_demo_font_manager.h  skity_markdown_canvas.h
markdown/include/markdown/: markdown.h  markdown_event_listener.h  markdown_exposure_listener.h  markdown_platform_loader.h  markdown_resource_loader.h
markdown/include/markdown/draw/: markdown_canvas.h  markdown_drawer.h  markdown_path.h  markdown_typewriter_drawer.h
markdown/include/markdown/element/: markdown_attachments.h  markdown_context.h  markdown_document.h  markdown_drawable.h  markdown_element.h  markdown_list_item.h  markdown_page.h  markdown_paragraph.h  markdown_region.h  markdown_run_delegates.h  markdown_table.h
markdown/include/markdown/layout/: markdown_layout.h  markdown_layout_node.h  markdown_selection.h
markdown/include/markdown/parser/: markdown_dom_node.h  markdown_parser.h  markdown_resource_loader.h
markdown/include/markdown/style/: markdown_color.h  markdown_gradient.h  markdown_style.h  markdown_style_initializer.h  markdown_style_reader.h  markdown_style_value.h
markdown/include/markdown/utils/: markdown_context.h  markdown_definition.h  markdown_float_comparison.h  markdown_marco.h  markdown_node.h  markdown_platform.h  markdown_screen_metrics.h  markdown_string_utils.h  markdown_textlayout_headers.h  markdown_trace.h  markdown_ui_thread.h  markdown_value.h
markdown/include/markdown/view/: markdown_gesture.h  markdown_platform_view.h  markdown_props.h  markdown_selection_view.h  markdown_view.h  markdown_view_animator.h  markdown_view_gesture.h  markdown_view_measurer.h  markdown_view_renderer.h
markdown/src/: CMakeLists.txt
markdown/testing/markdown/: CMakeLists.txt  markdown_case_builder.cc  markdown_case_builder.h  markdown_case_tests.cc  markdown_inline_parser_tests.cc  markdown_node_tests.cc  markdown_page_tests.cc  markdown_parser_tests.cc  markdown_selection_view_test_stub.cc  markdown_string_utils_tests.cc  markdown_style_tests.cc  markdown_tests_platform.cc  markdown_tests_platform.h  markdown_value_tests.cc  markdown_view_animator_tests.cc  markdown_view_measurer_tests.cc  markdown_view_typewriter_height_transition_prefetch_tests.cc  mock_markdown_canvas.cc  mock_markdown_canvas.h  mock_markdown_frame_driver.cc  mock_markdown_frame_driver.h  mock_markdown_platform_view.cc  mock_markdown_platform_view.h  mock_markdown_resource_loader.h  mock_markdown_shaper.h  mock_run_delegate.cc  mock_run_delegate.h
markdown/tools/: android_build.sh  check.sh  format.sh  harmony_build.sh  initial-markdown.sh  ios_build.sh  macos_build.sh  markdown_props.json  props_generator.py  run_unittests.sh
svg/: .gitignore  AGENTS.md  BUILD.gn  CPPLINT.cfg  ILLEGAL_PARSING_REGRESSION.md  README.md  ServalSVG.podspec
svg/.bits/: bits_components.yaml
svg/assets/: Paragraph.puml  SrXMLParser.puml
svg/docs/: android-pattern-rendering-design.md  audit-matrix.json  color-parsing.md  deepwiki.md  official-guide.md  support-matrix.json  vector-effect-design.md
svg/examples/android/: build.gradle  gradle.properties  settings.gradle
svg/examples/harmony/: build-profile.json5  oh-package.json5
svg/examples/osx/: README.md
svg/examples/parser/: main.cc
svg/include/canvas/: SrCanvas.h
svg/include/element/: SrSVGAnimation.h  SrSVGCircle.h  SrSVGContainer.h  SrSVGEllipse.h  SrSVGFilter.h  SrSVGFilterPrimitives.h  SrSVGImage.h  SrSVGLine.h  SrSVGLinearGradient.h  SrSVGMask.h  SrSVGNode.h  SrSVGPath.h  SrSVGPattern.h  SrSVGPatternResolver.h  SrSVGPolyLine.h  SrSVGPolygon.h  SrSVGRadialGradient.h  SrSVGRect.h  SrSVGSVG.h  SrSVGShape.h  SrSVGStop.h  SrSVGText.h  SrSVGTypes.h  SrSVGUse.h
svg/include/parser/: SrDOM.h  SrDOMParser.h  SrSVGDOM.h  SrSVGTraversalState.h  SrXMLExtractor.h  SrXMLParser.h  SrXMLParserError.h  SrXMLStreamParser.h
svg/include/renderer/: SrSVGAnimatedRenderer.h  SrSVGAnimationState.h
svg/include/utils/: SrFloatComparison.h  SrSVGPatternUtils.h
svg/platform/android/: CMakeLists.txt  build.gradle  consumer-rules.pro  gradle.properties
svg/platform/harmony/: .clang-format  .gitignore  build-profile.json5  hvigorfile.ts  hvigorw  oh-package.json5
svg/platform/iOS/: SrIOSCanvas.mm  SrIOSColorUtils.mm  SrIOSParagraph.mm  SrLogDarwin.mm  SrSVG.mm  SrSVGView.mm
svg/platform/skity/: SrSkityCanvas.cc  SrSkityParagraph.cc
svg/skills/serval-svg/: SKILL.md
svg/skills/serval-svg-expert/: SKILL.md
svg/src/element/: SrSVGAnimation.cc  SrSVGCircle.cc  SrSVGClipPath.cc  SrSVGContainer.cc  SrSVGDefs.cc  SrSVGEllipse.cc  SrSVGFilter.cc  SrSVGFilterPrimitives.cc  SrSVGImage.cc  SrSVGLine.cc  SrSVGLinearGradient.cc  SrSVGMask.cc  SrSVGNode.cc  SrSVGPath.cc  SrSVGPattern.cc  SrSVGPatternResolver.cc  SrSVGPolyLine.cc  SrSVGPolygon.cc  SrSVGRadialGradient.cc  SrSVGRect.cc  SrSVGSVG.cc  SrSVGShape.cc  SrSVGStop.cc  SrSVGText.cc  SrSVGTypes.c  SrSVGUse.cc
svg/src/parser/: SrDOM.cc  SrDOMParser.cc  SrSVGDOM.cc  SrXMLExtractor.c  SrXMLParser.cc  SrXMLParserError.cc  SrXMLStreamParser.cc
svg/src/utils/: SrSVGPatternUtils.cc
svg/tools/: format.sh  svg_support_audit.py
tools/gn_tools/test/: gn_script_test.sh  gn_test.podspec  gn_test_action.py  gn_test_shared.cc  gn_test_shared.h  gn_test_source.cc  gn_test_source.h  test.gni
(+431 files in other folders)
