cmake_minimum_required(VERSION 3.10)

project(serval_kit)
set(CMAKE_CXX_STANDARD 17)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/lynx-textra/public)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/base/include)
add_subdirectory(third_party/discount)
add_subdirectory(src)
add_subdirectory(testing/markdown)
add_subdirectory(third_party/base)
